--- a/app/src/main/res/layout/references.xml
+++ b/app/src/main/res/layout/references.xml
@@ -5,6 +5,7 @@
     app:cardBackgroundColor="@color/transparent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
+    android:layout_gravity="center_horizontal"
     app:cardCornerRadius="25dp"
     app:cardElevation="0dp"
     android:orientation="vertical">
