--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -13,7 +13,7 @@
         android:id="@+id/quotedata"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:orientation="vertical">
         <LinearLayout
             android:orientation="horizontal"
@@ -26,7 +26,7 @@
                 android:id="@+id/userpic"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/penguin" />
+                android:src="@drawable/ic_astronaut" />
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -36,7 +36,6 @@
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
                     android:text="@string/username"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
@@ -44,8 +43,7 @@
                     android:id="@+id/dia"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:text="dia"
+                    android:padding="1dp"
                     android:textColor="@color/grey_600" />
             </LinearLayout>
 
@@ -60,17 +58,32 @@
         </LinearLayout>
 
 
-
-        <CheckBox
-            android:id="@+id/like"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/likes"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:button="@drawable/favoritecheck"
-            android:padding="1dp"
-            android:textColor="@color/grey_800" />
+            android:foreground="?attr/selectableItemBackground"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/like"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:button="@drawable/favoritecheck"
+                android:textColor="@color/grey_800" />
+
+            <TextView
+                android:id="@+id/likecount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="2dp"
+                android:layout_marginBottom="2dp"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
 
         <android.support.v7.widget.CardView
-            android:layout_margin="1dp"
             app:cardCornerRadius="10dp"
             android:id="@+id/background"
             android:layout_width="match_parent"
@@ -79,7 +92,7 @@
             app:cardElevation="0dp">
 
             <LinearLayout
-                android:padding="15dp"
+                android:padding="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -90,7 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/transparent"
-                    android:padding="5dp"
+                    android:padding="10dp"
                     android:textAlignment="center"
                     android:textSize="20sp"
                     android:typeface="normal" />
@@ -101,7 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:backgroundTint="@color/transparent"
-                    android:padding="5dp"
+                    android:padding="10dp"
                     android:textSize="18sp"
                     android:textStyle="italic"
 
