--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,188 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:fitsSystemWindows="true">
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@color/white"
-        android:fitsSystemWindows="true">
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="top"
+        android:elevation="0dp" />
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsetoolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="@color/white"
-            app:expandedTitleGravity="center|bottom"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
-            app:title="Configurações"
-            app:titleEnabled="true">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/userpic"
-                android:layout_width="180dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="30dp"
-                android:src="@drawable/ic_person_black_24dp"
-                app:civ_fill_color="@color/transparent"
-                app:layout_collapseMode="parallax" />
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="top"
-                android:elevation="0dp"
-                app:layout_collapseMode="pin" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-
-    </android.support.design.widget.AppBarLayout>
+    <TextView
+            android:layout_height="wrap_content"
+        android:fontFamily="@font/nunitoblack"
+        android:padding="10dp"
+        android:text="Configurações"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:textSize="24sp" />
 
 
     <LinearLayout
-        android:background="@drawable/topround"
-        android:elevation="1dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/changename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:background="@color/white"
+            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+            android:drawablePadding="5dp"
+            android:elevation="0dp"
+            android:text="Alterar nome"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/grey_600"
+            android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_marginTop="-3dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:animateLayoutChanges="true">
-
-                <Button
-                    android:id="@+id/changename"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent"
-                    android:drawableStart="@drawable/usersquare"
-                    android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                    android:drawablePadding="5dp"
-                    android:elevation="0dp"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:padding="10dp"
-                    android:text="Editar perfil"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/white" />
-
-                <LinearLayout
-                    android:id="@+id/editname"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:visibility="gone">
-
-                    <ImageButton
-                        android:id="@+id/backname"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@color/transparent"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_chevron_left_black_24dp" />
-                    <EditText
-                        android:id="@+id/username"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/transparent"
-                        android:hint="@string/username"
-                        android:imeActionLabel="Salvar"
-                        android:imeOptions="actionDone"
-                        android:inputType="text"
-                        android:padding="15dp" />
-
-                    <Button
-                        android:background="@color/transparent"
-                        android:id="@+id/save"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:elevation="0dp"
-                        android:text="Ok"
-                        android:textColor="@color/colorAccent" />
-                </LinearLayout>
+        <Button
+            android:id="@+id/deleteposts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+            android:text="Remover posts"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/grey_600"
+            android:textStyle="bold" />
 
 
-            </RelativeLayout>
+        <Button
+            android:id="@+id/deleteaccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+            android:drawablePadding="5dp"
+            android:text="Remover conta"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/grey_600"
+            android:textStyle="bold" />
 
 
-            <Button
-                android:background="@color/transparent"
-
-                android:id="@+id/deleteposts"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/removepostsquare"
-                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                android:drawablePadding="5dp"
-                android:elevation="0dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="10dp"
-                android:text="Remover posts"
-                android:textAlignment="textStart"
-                android:textColor="@color/white" />
+        <Button
+            android:id="@+id/exit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
+            android:drawablePadding="5dp"
+            android:text="Sair"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/grey_600"
+            android:textStyle="bold" />
 
 
-            <Button
-                android:background="@color/transparent"
-
-                android:id="@+id/deleteaccount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/removeaccount"
-                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                android:drawablePadding="5dp"
-                android:elevation="0dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="10dp"
-                android:text="Remover conta"
-                android:textAlignment="textStart"
-                android:textColor="@color/white" />
-
-
-            <Button
-                android:background="@color/transparent"
-
-                android:id="@+id/exit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/logout"
-                android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
-                android:drawablePadding="5dp"
-                android:elevation="0dp"
-                android:foreground="?attr/selectableItemBackground"
-                android:padding="10dp"
-                android:text="Sair"
-                android:textAlignment="textStart"
-                android:textColor="@color/white" />
-
-
-        </LinearLayout>
     </LinearLayout>
 
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
