--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-
-    >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--<item
+        android:id="@+id/search"
+        android:title="Pesquisar"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_search_black_24dp" />-->
     <item
-        android:id="@+id/settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="Configurações" />
     <item
