--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,24 +24,22 @@
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="Settings" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowLightStatusBar">true</item>
-        <item name="android:fontFamily">@font/nunitoregular</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/white</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    <style name="ToolbarTitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:fontFamily">@font/nunitoblack</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:padding">5dp</item>
     </style>
 
 
-
-
-
-    <style name="Dialog_No_Border">
-        <item name="android:windowShowAnimation">@anim/slide_in_bottom</item>
-        <item name="android:animation">@anim/slide_in_bottom</item>
-        <item name="android:inAnimation">@anim/slide_in_bottom</item>
-            <item name="android:windowIsFloating">true</item>
-            <item name="android:windowBackground">@color/transparent</item>
+    <style name="Dialog_No_Border" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="android:fontFamily">@font/nunitoregular</item>
+        <item name="colorPrimary">@color/purple_400</item>
+        <item name="colorPrimaryDark">@color/purple_800</item>
+        <item name="colorAccent">@color/deep_purple_A200</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
     </style>
 
 </resources>
