--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -8,11 +8,12 @@
 
     tools:context=".NewUser">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/slides"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    <android.support.design.widget.TabLayout
+
+    <com.google.android.material.tabs.TabLayout
         app:tabGravity="center"
         android:background="@color/transparent"
         android:layout_alignParentBottom="true"
