--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,16 +10,17 @@
 
 
     <LinearLayout
+        android:layout_width="wrap_content"
         android:padding="15dp"
         android:orientation="vertical"
         android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     <ImageView
+        android:layout_width="100dp"
         android:tint="@color/white"
         android:id="@+id/applogo"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:src="@drawable/ic_saturn_and_other_planets" />
     <com.github.silvestrpredko.dotprogressbar.DotProgressBar
         app:animationDirection="right"
