--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,8 +8,7 @@
     tools:context=".Fragments.ProfileFragment">
 
 
-
-        <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:background="@color/grey_100"
             android:id="@+id/myquotesrecycler"
             android:layout_width="match_parent"
@@ -30,14 +29,15 @@
         android:progressDrawable="@drawable/circle" />
 
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:background="@color/transparent"
         android:id="@+id/appbarlayout"
         android:fitsSystemWindows="true"
         app:elevation="0dp">
-        <android.support.design.widget.CollapsingToolbarLayout
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsetoolbar"
             app:contentScrim="@color/white"
             android:layout_width="match_parent"
@@ -103,23 +103,10 @@
 
                 </LinearLayout>
             </LinearLayout>
-        </android.support.design.widget.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
