--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -60,9 +60,8 @@
 
         <LinearLayout
             android:id="@+id/likes"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:foreground="?attr/selectableItemBackground"
             android:orientation="horizontal">
 
             <CheckBox
@@ -83,7 +82,7 @@
         </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             app:cardCornerRadius="10dp"
             android:id="@+id/background"
             android:layout_width="match_parent"
@@ -98,7 +97,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <com.creat.motiv.Utils.Typewritter
+                <TextView
                     android:id="@+id/quote"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -108,7 +107,7 @@
                     android:textSize="20sp"
                     android:typeface="normal" />
 
-                <com.creat.motiv.Utils.Typewritter
+                <TextView
                     android:id="@+id/author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -122,7 +121,7 @@
             </LinearLayout>
 
 
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
