--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -46,7 +46,7 @@
         android:progressDrawable="@drawable/circle" />
 
     <androidx.recyclerview.widget.RecyclerView
-            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             android:background="@color/grey_100"
             android:id="@+id/composesrecycler"
             android:layout_width="match_parent"
