--- a/app/src/main/res/layout/color_card.xml
+++ b/app/src/main/res/layout/color_card.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="2dp"
     android:id="@+id/colorcard"
-    android:elevation="0dp"
+    app:cardElevation="0dp"
     app:cardCornerRadius="15dp"
 
     >
