--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -2,12 +2,12 @@
 
 
 <!-- TODO: Update blank fragment layout -->
-<androidx.cardview.widget.CardView android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    app:cardBackgroundColor="@color/white"
-    app:cardElevation="0dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:background="@drawable/topround"
+    android:orientation="vertical">
 
 
     <androidx.core.widget.NestedScrollView
@@ -217,7 +217,7 @@
     </androidx.core.widget.NestedScrollView>
 
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
 
 
 
