--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -260,9 +260,9 @@
 
 
     <!-- my colors -->
-    <color name="colorPrimary">#ab47bc</color>
-    <color name="colorPrimaryDark">#6a1b9a</color>
-    <color name="colorAccent">#B377BE</color>
+    <color name="colorPrimary">#673AB7</color>
+    <color name="colorPrimaryDark">#512DA8</color>
+    <color name="colorAccent">#7C4DFF</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="lwhite">#64ffffff</color>
