--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -16,6 +16,8 @@
         android:layout_margin="5dp"
         android:orientation="vertical">
         <LinearLayout
+            android:id="@+id/quotetop"
+            android:foreground="?attr/selectableItemBackground"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,6 +25,7 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_gravity="center"
+                android:foreground="?attr/selectableItemBackground"
                 android:id="@+id/userpic"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -32,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:foreground="?attr/selectableItemBackground"
                     android:fontFamily="@font/nunitoblack"
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
@@ -83,6 +87,7 @@
 
 
         <androidx.cardview.widget.CardView
+            android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="10dp"
             android:id="@+id/background"
             android:layout_width="match_parent"
