--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,8 +52,12 @@
     </style>
 
     <style name="DialogAnimation">
-        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowEnterAnimation">@anim/pop_in</item>
         <item name="android:windowExitAnimation">@anim/pop_out</item>
+    </style>
+    <style name="BottomDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out</item>
     </style>
 
     <style name="CustomAlert" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -62,6 +66,16 @@
 
     <style name="Dialog_No_Border">
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
+        <item name="android:fontFamily">@font/nunitoregular</item>
+        <item name="colorPrimary">@color/purple_400</item>
+        <item name="colorPrimaryDark">@color/purple_800</item>
+        <item name="colorAccent">@color/deep_purple_A200</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
+    </style>
+    <style name="Bottom_Dialog_No_Border">
+        <item name="android:windowAnimationStyle">@style/BottomDialogAnimation</item>
         <item name="android:fontFamily">@font/nunitoregular</item>
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
