--- a/app/src/main/res/drawable/bottom_line.xml
+++ b/app/src/main/res/drawable/bottom_line.xml
@@ -7,12 +7,12 @@
         </shape>
     </item>
 
-    <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
+    <item android:top="-3dp" android:right="-3dp" android:left="-3dp">
         <shape>
             <solid android:color="@color/transparent" />
             <stroke
-                 android:width="1dp"
-                android:color="@color/grey_500" />
+                 android:width="2dp"
+                android:color="@color/black" />
         </shape>
     </item>
 
